<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/refresh"
        android:title="@string/refresh"
        android:onClick="goForRefresh"
        android:orderInCategory="1"/>
    <item android:id="@+id/search_bar"
        android:title="@string/search"
        android:onClick="goForSearch"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"/>
    <item android:id="@+id/home"
        android:title="@string/home"
        android:onClick="goToHomePage"
        android:icon="@drawable/home"
        android:orderInCategory="2"/>
    <item android:id="@+id/celcius"
        android:title="@string/celcius"
        android:onClick="celciusConverter"
        android:orderInCategory="2"/>
    <item android:id="@+id/farenhite"
        android:title="@string/farenhite"
        android:onClick="farenConverter"
        android:orderInCategory="2" />

</menu>