<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dark"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/LocationTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_location_on_black_24dp"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="3dp"
        android:layout_weight="1"
        android:background="@drawable/plain"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="10dp">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:orientation="vertical">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/today"
                android:textColor="#000000"
                android:textSize="16dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/min"
                    android:textColor="#000000"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/todayMin"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="#000000"
                    android:textSize="16dp" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/todayDate"


                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/max"
                    android:textColor="#000000"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/todayMax"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="#000000"
                    android:textSize="16dp" />


            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="3dp"
        android:layout_weight="1"
        android:background="@drawable/plain"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="10dp">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:orientation="vertical">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tomorrow"
                android:textColor="#000000"
                android:textSize="16dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"

                    android:layout_height="match_parent"
                    android:text="@string/min"
                    android:textColor="#000000"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/tomorrowMin"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="9.2C"
                    android:textColor="#000000"
                    android:textSize="16dp" />


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tomorrowDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    android:text="@string/max"
                    android:textColor="#000000"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/tomorrowMax"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="9.2C"
                    android:textColor="#000000"
                    android:textSize="16dp" />


            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="3dp"
        android:layout_weight="1"
        android:background="@drawable/plain"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="10dp">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/thirdDay"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/saturday"
                android:textColor="#000000"

                android:textSize="16dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/min"
                    android:textColor="#000000"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/thirdMin"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/_8_0c"
                    android:textColor="#000000"
                    android:textSize="16dp" />


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/thirdDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    android:text="@string/max"
                    android:textColor="#000000"
                    android:textSize="16dp"/>

                <TextView
                    android:id="@+id/thirdMax"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="18C"
                    android:textColor="#000000"
                    android:textSize="16dp" />


            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="3dp"
        android:layout_weight="1"
        android:background="@drawable/plain"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="10dp">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fourthDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Day Four"
                android:textColor="#000000"

                android:textSize="16dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"

                    android:layout_height="match_parent"
                    android:text="@string/min"
                    android:textColor="#000000"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/fourthMin"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="9.2C"
                    android:textColor="#000000"
                    android:textSize="16dp" />


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fourthDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="January 11,2018"
                android:textColor="#000000"
                android:textSize="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/max"
                    android:textColor="#000000"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/fourthMax"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="18C"
                    android:textColor="#000000"
                    android:textSize="16dp" />


            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="3dp"
        android:layout_weight="1"
        android:background="@drawable/plain"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="10dp">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fifthDay"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Day Five"
                android:textColor="#000000"

                android:textSize="16dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"

                    android:layout_height="match_parent"
                    android:text="@string/min"
                    android:textColor="#000000"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/fifthMin"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="9.2C"
                    android:textColor="#000000"
                    android:textSize="16dp" />


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fifthDate"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:text="January 15,2018"

                android:textColor="#000000"
                android:textSize="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    android:text="@string/max"
                    android:textColor="#000000"
                    android:textSize="16dp"/>

                <TextView
                    android:id="@+id/fifthMax"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="18C"
                    android:textColor="#000000"
                    android:textSize="16dp" />


            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


</LinearLayout>


